Peakk Store version 4.5

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h1>Store Setting</h1>
                     <a onclick="ClOSESettingsCheck()"><ion-icon name="close-outline"></ion-icon></a>
                 </div>
-                <div class="setting-search">
+                <!-- <div class="setting-search">
                     <div class="search" id="SearchOnSetting">
                         <input type="text" class="searchTerm" id="SearchINPUTOnSet"
                             placeholder="Type here to search tools and settings.">
@@ -70,7 +70,7 @@
                             <ion-icon name="search-sharp"></ion-icon>
                         </button>
                     </div>
-                </div>
+                </div> -->
                 <div class="settings-content">
                     <!-- Settings Content -->
                     <h1>Let's start with <img src="./Image/Peakk-Logo/Mask group.png" alt="">Settings</h1>
@@ -105,7 +105,7 @@
 
     <!-- Simbol when bottom navbar hide -->
 
-    <div class="SimbolBottm" onclick="OpenBottomNavbarClickCheck()">
+    <div class="SimbolBottm" onclick="OpenBottomNavbarClickCheck()" id="Navbi">
         <div class="SimbolText">
             <hr id="ClickToggleSim">
         </div>
